syntax = "proto3";

package v1alpha1;

option go_package = "federation/v1alpha1";

// ExportedService represents a service available across federated meshes with a name and namespace.
message ExportedService {
  // Name of the exported service
  string name = 1;
  // Namespace where exported service is defined
  string namespace = 2;
  repeated ServicePort ports = 3;
  map<string, string> labels = 4;
}

message ServicePort {
  uint32 number = 1;
  string protocol = 2;
  string name = 3;
  uint32 targetPort = 4;
}
